# manageditk

./: ChangeLog.txt  FinishCMake.bat.in  ManagedITKConfig.cmake.in  ProjectHome.md  UseManagedITK.cmake
Examples/ExternalProjects/VTK/: CMakeLists.txt  Readme.txt
Source/: CMakeLists.txt  WrapBasicTypes.cmake  WrapExternalProject.cmake  WrapITKTypes.cmake  WrapUtilityFunctions.cmake
Source/Common/: AssemblyInfo.cpp  itkFlatStructuringElement.txx  itkManagedCalculator_TYPE.cxx.in  itkManagedDataObjectWithReadWrite.cxx  itkManagedDimension.cxx  itkManagedFiniteDifferenceImageFilter.cxx  itkManagedFiniteDifferenceImageFilter_WRAPPER.cxx.in  itkManagedImageBase.cxx  itkManagedImageConstIterator.cxx  itkManagedImageFunction_TYPE.cxx.in  itkManagedImageFunction_WRAPPER.cxx.in  itkManagedImageIteratorWithIndex.cxx  itkManagedImageIteratorWithIndex_TYPE.cxx.in  itkManagedImageIteratorWithIndex_WRAPPER.cxx.in  itkManagedImageIterator_TYPE.cxx.in  itkManagedImageIterator_WRAPPER.cxx.in  itkManagedImageRegion.cxx  itkManagedImageSource.cxx  itkManagedImageSource_TYPE.cxx.in  itkManagedImageToImageFilter.cxx  itkManagedImageToImageFilter_TYPE.cxx.in  itkManagedImageToImageMetric.cxx  itkManagedImageToImageMetric_WRAPPER.cxx.in  itkManagedImageToMeshFilter.cxx  itkManagedImageToMeshFilter_TYPE.cxx.in  itkManagedImageToPathFilter.cxx  itkManagedImageToPathFilter_TYPE.cxx.in  itkManagedImageToPathFilter_WRAPPER.cxx.in  itkManagedImage_TYPE.cxx.in  itkManagedInvalidWrappedTypeException.cxx  itkManagedMatrix.cxx  itkManagedMatrixOffsetTransform.cxx  itkManagedMatrixOffsetTransform_WRAPPER.cxx.in  itkManagedMeshBase.cxx  itkManagedMeshSource_WRAPPER.cxx.in  itkManagedMeshToMeshFilter_TYPE.cxx.in  itkManagedMeshToMeshFilter_WRAPPER.cxx.in  itkManagedMesh_TYPE.cxx.in  itkManagedMesh_WRAPPER.cxx.in  itkManagedNeighborhood.cxx  (+32 more)
Source/Modules/: CMakeLists.txt
Source/Modules/ComposeFilters/: managed_itkCheckerBoardImageFilter.cmake  managed_itkCompose3DCovariantVectorImageFilter.cmake  managed_itkCompose3DVectorImageFilter.cmake  managed_itkComposeRGBAImageFilter.cmake  managed_itkPasteImageFilter.cmake  managed_itkTileImageFilter.cmake  managed_itkVectorIndexSelectionCastImageFilter.cmake
Source/Modules/DistanceMaps/: managed_itkDanielssonDistanceMapImageFilter.cmake
Source/Modules/EdgeFilters/: managed_itkZeroCrossingBasedEdgeDetectionImageFilter.cmake  managed_itkZeroCrossingImageFilter.cmake
Source/Modules/GradientFilters/: CMakeLists.txt  managed_itkDerivativeImageFilter.cmake  managed_itkGradientMagnitudeRecursiveGaussianImageFilter.cmake  managed_itkGradientRecursiveGaussianImageFilter.cmake  managed_itkLaplacianImageFilter.cmake
Source/Modules/IO/: managed_itkBMPImageIO.cmake  managed_itkGDCMImageIO.cmake  managed_itkImageFileReader.cmake  managed_itkImageFileWriter.cmake  managed_itkImageSeriesReader.cmake  managed_itkImportImageFilter.cmake  managed_itkJPEGImageIO.cmake  managed_itkPNGImageIO.cmake  managed_itkTIFFImageIO.cmake
Source/Modules/IntensityFilters/: itkGenerateMaskImageFilter.txx  itkLocalMaximaImageFilter.h  itkLocalMaximaImageFilter.txx  managed_itkAdaptiveHistogramEqualizationImageFilter.cmake  managed_itkGenerateMaskImageFilter.cmake  managed_itkIntensityWindowingImageFilter.cmake  managed_itkRegionalMinimaImageFilter.cmake  managed_itkRescaleIntensityImageFilter.cmake  managed_itkSigmoidImageFilter.cmake  managed_itkVectorRescaleIntensityImageFilter.cmake  managed_itkVectorShiftScaleImageFilter.cmake  managed_itkVotingBinaryHoleFillingImageFilter.cmake
Source/Modules/Interpolators/: CMakeLists.txt  itkCosineWindowedSincInterpolateImageFunction.h  itkLanczosWindowedSincInterpolateImageFunction.h  managed_itkBSplineInterpolateImageFunction.cmake  managed_itkLinearInterpolateImageFunction.cmake  managed_itkNearestNeighborInterpolateImageFunction.cmake  managed_itkWindowedSincInterpolateImageFunction.cmake
Source/Modules/Iterators/: managed_itkImageLinearConstIteratorWithIndex.cmake  managed_itkImageLinearIteratorWithIndex.cmake  managed_itkImageRandomConstIteratorWithIndex.cmake  managed_itkImageRandomIteratorWithIndex.cmake  managed_itkImageRandomNonRepeatingConstIteratorWithIndex.cmake  managed_itkImageRegionExclusionConstIteratorWithIndex.cmake  managed_itkImageRegionIterator.cmake  managed_itkImageSliceIteratorWithIndex.cmake
Source/Modules/LevelSetFilters/: itkFastMarchingImageFilter.txx  itkLevelSetSpeedImageFilter.txx  managed_itkAntiAliasBinaryImageFilter.cmake  managed_itkCannySegmentationLevelSetImageFilter.cmake  managed_itkCurvesLevelSetImageFilter.cmake  managed_itkGeodesicActiveContourLevelSetImageFilter.cmake  managed_itkLevelSetSpeedImageFilter.cmake  managed_itkThresholdSegmentationLevelSetImageFilter.cmake
Source/Modules/Meshes/: CMakeLists.txt  managed_itkDeformableMesh3DFilter.cmake  managed_itkDeformableSimplexMesh3DBalloonForceFilter.cmake  managed_itkDeformableSimplexMesh3DGradientConstraintForceFilter.cmake  managed_itkQuadEdgeMesh.cmake  managed_itkSimplexMesh.cmake  managed_itkTransformMeshFilter.cmake.notwrapped  managed_itkTriangleMeshToSimplexMeshFilter.cmake  managed_itkVTKPolyDataReader.cmake
Source/Modules/MorphologicalFilters/: CMakeLists.txt  itkBinaryClosingImageFilter.h  itkBinaryClosingImageFilter.txx  itkBinaryOpeningImageFilter.h  itkBinaryOpeningImageFilter.txx  managed_itkBinaryClosingImageFilter.cmake  managed_itkBinaryDilateImageFilter.cmake  managed_itkBinaryErodeImageFilter.cmake  managed_itkBinaryMorphologicalClosingImageFilter.cmake  managed_itkBinaryMorphologicalOpeningImageFilter.cmake  managed_itkBlackTopHatImageFilter.cmake  managed_itkGrayscaleDilateImageFilter.cmake  managed_itkGrayscaleFillholeImageFilter.cmake  managed_itkGrayscaleMorphologicalClosingImageFilter.cmake  managed_itkHConcaveImageFilter.cmake  managed_itkHMaximaImageFilter.cmake  managed_itkHMinimaImageFilter.cmake  managed_itkMorphologicalWatershedImageFilter.cmake  managed_itkVanHerkGilWermanErodeImageFilter.cmake  managed_itkWatershedImageFilter.cmake
Source/Modules/NoiseFilters/: CMakeLists.txt  itkAdditiveGaussianNoiseImageFilter.h  (+4 more)
(+419 files in other folders)
