PROJECT(WrapVTK)

# Find required packages
FIND_PACKAGE(ITK REQUIRED)
FIND_PACKAGE(VTK REQUIRED)
FIND_PACKAGE(ManagedITK REQUIRED)

# Use required packages
INCLUDE(${ITK_USE_FILE})
INCLUDE(${VTK_USE_FILE})
INCLUDE(${MANAGED_ITK_USE_FILE})

# Wrap the project
BEGIN_MANAGED_WRAP_EXTERNAL_PROJECT("VTK")
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /AI \"${VTK_DIR}/bin/${CMAKE_CFG_INTDIR}\"")
  SET(MANAGED_WRAPPER_OUTPUT "${CMAKE_BINARY_DIR}")
END_MANAGED_WRAP_EXTERNAL_PROJECT()
